force-app/main/default/objects/ListMapPlatform_V2__e/ListMapPlatform_V2__e.object-meta.xml
<CustomObject>
    <label>ListMapPlatform_V2</label>
    <pluralLabel>ListMapPlatform_V2s</pluralLabel>
</CustomObject>