force-app/main/default/objects/ListMapPlatform_V2__e/fields/CcAddress__c.field-meta.xml
<CustomField>
    <fullName>CcAddress__c</fullName>
    <label>CcAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>