force-app/main/default/objects/ListMapPlatform_V2__e/fields/ClientThreadIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ClientThreadIdentifier__c</fullName>
    <label>ClientThreadIdentifier</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>