force-app/main/default/objects/ListMapPlatform_V2__e/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <label>CreatedById</label>
    <length>20</length>
    <type>Text</type>
</CustomField>