force-app/main/default/objects/ListMapPlatform_V2__e/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <label>CreatedByName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>