force-app/main/default/objects/ListMapPlatform_V2__e/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <label>EmailTemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>