force-app/main/default/objects/ListMapPlatform_V2__e/fields/FileTest_Created_Date_c__c.field-meta.xml
<CustomField>
    <fullName>FileTest_Created_Date_c__c</fullName>
    <label>FileTest_Created_Date__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>