force-app/main/default/objects/ListMapPlatform_V2__e/fields/FirstOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOpenedDate__c</fullName>
    <label>FirstOpenedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>