force-app/main/default/objects/ListMapPlatform_V2__e/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>FromAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>