force-app/main/default/objects/ListMapPlatform_V2__e/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <label>FromName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>