force-app/main/default/objects/ListMapPlatform_V2__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>