force-app/main/default/objects/ListMapPlatform_V2__e/fields/Incoming__c.field-meta.xml
<CustomField>
    <fullName>Incoming__c</fullName>
    <label>Incoming</label>
    <length>10</length>
    <type>Text</type>
</CustomField>