force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsBounced__c.field-meta.xml
<CustomField>
    <fullName>IsBounced__c</fullName>
    <label>IsBounced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>