force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsClientManaged__c.field-meta.xml
<CustomField>
    <fullName>IsClientManaged__c</fullName>
    <label>IsClientManaged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>