force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsExternallyVisible__c.field-meta.xml
<CustomField>
    <fullName>IsExternallyVisible__c</fullName>
    <label>IsExternallyVisible</label>
    <length>10</length>
    <type>Text</type>
</CustomField>