force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsOpened__c.field-meta.xml
<CustomField>
    <fullName>IsOpened__c</fullName>
    <label>IsOpened</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>