force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsPrivateDraft__c.field-meta.xml
<CustomField>
    <fullName>IsPrivateDraft__c</fullName>
    <label>IsPrivateDraft</label>
    <length>10</length>
    <type>Text</type>
</CustomField>