force-app/main/default/objects/ListMapPlatform_V2__e/fields/IsTracked__c.field-meta.xml
<CustomField>
    <fullName>IsTracked__c</fullName>
    <label>IsTracked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>