force-app/main/default/objects/ListMapPlatform_V2__e/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <label>LastModifiedById</label>
    <length>20</length>
    <type>Text</type>
</CustomField>