force-app/main/default/objects/ListMapPlatform_V2__e/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>