force-app/main/default/objects/ListMapPlatform_V2__e/fields/LastOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>LastOpenedDate__c</fullName>
    <label>LastOpenedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>