force-app/main/default/objects/ListMapPlatform_V2__e/fields/MessageDate__c.field-meta.xml
<CustomField>
    <fullName>MessageDate__c</fullName>
    <label>MessageDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>