force-app/main/default/objects/ListMapPlatform_V2__e/fields/MessageIdentifier__c.field-meta.xml
<CustomField>
    <fullName>MessageIdentifier__c</fullName>
    <label>MessageIdentifier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>