force-app/main/default/objects/ListMapPlatform_V2__e/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>RelatedToId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>