force-app/main/default/objects/ListMapPlatform_V2__e/fields/ReplyToEmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>ReplyToEmailMessageId__c</fullName>
    <label>ReplyToEmailMessageId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>