force-app/main/default/objects/ListMapPlatform_V2__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>