force-app/main/default/objects/ListMapPlatform_V2__e/fields/ThreadIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ThreadIdentifier__c</fullName>
    <label>ThreadIdentifier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>