force-app/main/default/objects/ListMapPlatform_V2__e/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>ToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>