force-app/main/default/objects/ListMapPlatform_V2__e/fields/ValidatedFromAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidatedFromAddress__c</fullName>
    <label>ValidatedFromAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>